--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "kartik-v/mpdf": "*"
+        "mpdf/mpdf": "~7.0.0"
     },
     "autoload": {
         "psr-4": {
