--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "kartik-v/yii2-mpdf",
+    "name": "tungmv7/yii2-mpdf",
     "description": "A Yii2 wrapper component for the mPDF library which generates PDF files from UTF-8 encoded HTML.",
     "keywords": ["yii2", "extension", "pdf", "mpdf", "utf8", "html", "component"],
     "homepage": "https://github.com/kartik-v/yii2-mpdf",
