--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
             "homepage": "http://www.krajee.com/"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "beta",
     "require": {
         "mpdf/mpdf": "~7.0.0"
     },
